--- a/index.html
+++ b/index.html
@@ -912,11 +912,11 @@ of the plugin in your own script tag, or on your own linked JavaScript
 file. Often, you can set additional options so that when the function is
 initialized, and so that you can pass in whichever options will get the
 plugin to display the way you want it to display, but you want to make
-sure that this script loads last. So, the order of things are that you
-will have the markup for the jQuery plugin, then you'll have jQuery,
-then the jQuery plugin, and then you will initialize the plugin on your
-own script. And then also make sure that if there's any CSS files, those
-are included as well.</p>
+sure that this script loads last. The order of things are that you
+will have the <b>markup for the jQuery plugin</b>, then you'll have <b>jQuery</b>,
+then the <b>jQuery plugin</b>, and then you will <b>initialize the plugin on your
+own script</b>. And finally, <b>make sure that if there's any CSS files, those
+are included</b> as well.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 12. documentation mish-mash (15) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -2042,12 +2042,12 @@ but if you know some JavaScript and you're familiar with having done
 this kind of thing before, you'll figure it out pretty quickly. What can
 we do? Let's take a look at it.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 85. flexslider with options (48) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~~~ 85. example, flexslider with options (48) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border displayed"
   src="./images/image085.png"
   loading="lazy"
-  title="FlexSlider with Options"
-  alt="FlexSlider with Options."
+  title="Example, FlexSlider with Options; load function"
+  alt="Example, FlexSlider with Options; load function."
   style="width:50%" >
 
 <p>Just like we did with the custom enemy method in jQuery, where we can
@@ -2063,14 +2063,14 @@ syntax because we'll see it a lot, especially with the plugins.</p>
   src="./images/image086.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="myscript.js FlexSlider options"
-  alt="myscript.js FlexSlider options." />    
+  title="myscript.js, FlexSlider options"
+  alt="myscript.js, FlexSlider options." />    
 <img class="border"
   src="./images/image087.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Example, using FlexSlider"
-  alt="Example, using FlexSlider." />
+  title="index.html, FlexSlider"
+  alt="index.html, FlexSlider." />
 <p style="clear: both;"></p>
 
 <p>Let's come over here and inside our script file here, inside our
@@ -2093,13 +2093,13 @@ remember what a trouble that was for us to figure out how to do
 manually. Well, here it's built in, so we don't have to really even
 worry about that.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~ 88/89. other flexslider options (49) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~ 88/89. example, other flexslider options (49) ~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image088.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="FlexSlider with Options"
-  alt="FlexSlider with Options." />    
+  title="Example again, FlexSlider with Options"
+  alt="Example again, FlexSlider with Options." />    
 <img class="border"
   src="./images/image089.png"
   loading="lazy"
@@ -10105,7 +10105,7 @@ and labeled properly. We're on our way to creating the pig game.</p>
 
 <ul>
   <li><a href="./zip/4.02-GameofPig-START.zip" 
-    alt="Game of Pig START (download ZIPs)." 
+    alt="Game of Pig START (download ZIP)." 
     target="_blank" rel="noreferrer noopener">
 	4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
@@ -11746,7 +11746,7 @@ we even created a game.</p>
 so far. We have a fourth course in the specialization, and in that
 course, we'll get even more complex scripts, and I promise you're going
 to learn even more JavaScript and you'll get even better at it and
-you'll get more practice. So I look forward to seeing you there.</p>
+you'll get more practice. I look forward to seeing you there.</p>
 
 <p>..the end…</p>
 
@@ -11756,6 +11756,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Last Updated 6/17/2024 Mon 3+pm</h6>
 <h6>Last Updated 6/25/2024 Tue 8+pm</h6>
 <h6>Last Updated 7/12/2024 Fri 1+am</h6>
+<h6>Last Updated 7/15/2024 Mon 4+pm</h6>
 
 </body>
 </html>
