--- a/index.html
+++ b/index.html
@@ -92,15 +92,16 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <h2><a href="#table-of-contents">Table of Contents</a></h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ hoverable dropdown menu ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<figure class="hover-menu">
-	<img src="/images/image001.png"/>
-	<div>
-		<a href="#ch1-01">jQuery</a>
-		<a href="#ch2-01">Scripts</a>
-		<a href="#ch3-01">Objects</a>
-		<a href="#ch4-01">Game</a>
-	</div>
-</figure>
+
+<!-- <figure class="hover-menu">  -->
+<!--	<img src="/images/image001.png"/>  -->
+<!--	<div>  -->
+<!--		<a href="#ch1-01">jQuery</a>  -->
+<!--		<a href="#ch2-01">Scripts</a>  -->
+<!--		<a href="#ch3-01">Objects</a>  -->
+<!--		<a href="#ch4-01">Game</a>  -->
+<!--	</div>  -->
+<!-- </figure>  -->
 
 <h3>Week 1: jQuery Plugins and Capturing the Scroll Event</h3>
 
@@ -11767,6 +11768,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Last Updated 6/17/2024 Mon 3+pm</h6>
 <h6>Last Updated 6/25/2024 Tue 8+pm</h6>
 <h6>Last Updated 7/12/2024 Fri 1+am</h6>
+<h6>Last Updated 7/18/2024 Thu 10+am</h6>
 
 </body>
 </html>
