--- a/index.html
+++ b/index.html
@@ -768,13 +768,14 @@ elements on web pages and that's really pretty fun.</p>
 <h2 id="ch1-02">1.02 Introduction to jQuery Plugins (3:49)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 05. intro to jquery plugins (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<span class="displayed">Click image to link to jQuery registry plugin: 
-  <a href="https://plugins.jquery.com/" target="_blank">
-    <img src="/images/image005.png" width="20%" loading="lazy" 
-	  alt="jQuery registry plugin." />
-  </a>
-</span>
-
+<img class="displayed"
+  src="./images/image005.png" 
+  loading="lazy"
+  title="jQuery registry plugin website"
+  alt="jQuery registry plugin website."
+  style="width:40%;" />
+<!-- <span class="displayed">Click image to link to jQuery registry plugin: -->
+<!--  <a href="https://plugins.jquery.com/" target="_blank"> </a> </span> -->
 <!--  alt="The jQuery Plugin Registry" width="300px" height="300px" -->
 
 <p>Just as a quick recap, we've learned a lot of JavaScript so far.</p>
