--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/1.04-jQuery-Plugins.pdf" 
-    alt="1.04 jQuery Plugins (display PDF)." 
+    aria-label="1.04 jQuery Plugins (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     1.04 jQuery Plugins (display PDF)</a><br><br></li>
   <li><a href="/zip/1.04-FlexSliderBasic-START.zip" 
-    alt="1.04 Flex Slider Basic START (download ZIP)." 
+    aria-label="1.04 Flex Slider Basic START (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
     1.04 Flex Slider Basic START (download ZIP)</a><br><br></li>
   <li><a href="/zip/1.04-FlexSliderPlugin.zip" 
-    alt="1.04 Flex Slider Plugin (download ZIP)." 
+    aria-label="1.04 Flex Slider Plugin (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
     1.04 Flex Slider Plugin (download ZIP)</a></li>
 </ul>
@@ -141,7 +141,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
-    alt="1.12 jQuery Flex Slider Plugin (display PDF)." 
+    aria-label="1.12 jQuery Flex Slider Plugin (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     1.12 jQuery Flex Slider Plugin (display PDF)</a></li>
 </ul>
@@ -156,7 +156,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="/zip/2.02-jQuery-Scroll-Effects-START.zip" 
     target="_blank" rel="noopener noreferrer"
-    alt="2.02 jQuery Scroll Effects START (download ZIP).">
+    aria-label="2.02 jQuery Scroll Effects START (download ZIP).">
     2.02 jQuery Scroll Effects START (download ZIP)</a></li>
 </ul>
 
@@ -180,7 +180,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
-    alt="2.17 jQuery Page Location Tracking (display PDF)." 
+    aria-label="2.17 jQuery Page Location Tracking (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     2.17 jQuery Page Location Tracking (display PDF)</a></li>
 </ul>
@@ -192,7 +192,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="/zip/2.18-JS-Scroll-Effects-START.zip" 
     target="_blank" rel="noreferrer noopener" 
-    alt="2.18 JavaScript Scroll Effects START (download ZIP).">
+    aria-label="2.18 JavaScript Scroll Effects START (download ZIP).">
     2.18 JS Scroll Effects START (download ZIP)</a></li>
 </ul>
 
@@ -211,7 +211,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/2.28-JS-ScrollEffects.pdf" 
-    alt="2.28 JavaScript Scroll Effects (display PDF)."
+    aria-label="2.28 JavaScript Scroll Effects (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.28 JS Scroll Effects (display PDF)</a></li>
 </ul>
@@ -223,23 +223,23 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="/zip/2.29-ScriptionPart1-START.zip" 
     target="_blank" rel="noreferrer noopener" 
-	alt="2.29 Scription Part 1 START (download ZIP).">
+	aria-label="2.29 Scription Part 1 START (download ZIP).">
     2.29 Scription Part 1 START (download ZIP)</a><br><br></li>
   <li><a href="/zip/2.29-ScriptionPart1-Snippets.zip" 
     target="_blank" rel="noreferrer noopener" 
-	alt="2.29 Scription Part 1 Snippets (download ZIP).">
+	aria-label="2.29 Scription Part 1 Snippets (download ZIP).">
     2.29 Scription Part 1 Snippets (download ZIP)</a><br><br></li>
   <li><a href="/zip/2.29-ScriptionPart2-START.zip" 
     target="_blank" rel="noreferrer noopener"
-	alt="2.29 Scription Part 2 START (download ZIP).">
+	aria-label="2.29 Scription Part 2 START (download ZIP).">
     2.29 Scription Part 2 START (download ZIP)</a><br><br></li>
   <li><a href="/zip/2.29-ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener" 
-	alt="2.29 Scription Part 2 Snippets (download ZIP).">
+	aria-label="2.29 Scription Part 2 Snippets (download ZIP).">
     2.29 Scription Part 2 Snippets (download ZIP)</a><br><br></li>
   <li><a href="/zip/2.29-FlexSliderFiles-START.zip" 
     target="_blank" rel="noreferrer noopener" 
-	alt="2.29 Flex Slider Files START (download ZIP).">
+	aria-label="2.29 Flex Slider Files START (download ZIP).">
     2.29 Flex Slider Files START (download ZIP)</a></li>
 </ul>
 
@@ -258,11 +258,11 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
-    alt="2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)."
+    aria-label="2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a><br><br></li>
   <li><a href="/pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
-    alt="2.39 Scription Site Part 2 Interchange Challenges (display PDF)." 
+    aria-label="2.39 Scription Site Part 2 Interchange Challenges (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 2 Interchange Challenges (display PDF)</a></li>
 </ul>
@@ -291,11 +291,11 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/3.07-JS-Object-Challenges.pdf" 
-    alt="3.07 JavaScript Object Challenges (display PDF)."
+    aria-label="3.07 JavaScript Object Challenges (display PDF)."
     target="_blank" rel="noreferrer noopener">
     3.07 JS Objects Challenges (display PDF)</a><br><br></li>
   <li><a href="/pdf/3.07-JS-Objects-Data.pdf" 
-    alt="3.07 JavaScript Objects and Data (display PDF)."
+    aria-label="3.07 JavaScript Objects and Data (display PDF)."
     target="_blank" rel="noreferrer noopener">
     3.07 JS Objects &amp; Data (display PDF)</a></li>
 </ul>
@@ -306,7 +306,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/3.08-PigDiceGame-Diagrams.png" 
-    alt="3.08 Pig Dice Game Diagrams (display PNG)."
+    aria-label="3.08 Pig Dice Game Diagrams (display PNG)."
     target="_blank" rel="noreferrer noopener">
     3.08 Pig Dice Game Diagrams (display PNG)</a></li>
 </ul>
@@ -319,7 +319,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/3.11-IntrotoPigDiceGame.pdf" 
-    alt="3.11 Introduction to the Pig Dice Game (display PDF)."
+    aria-label="3.11 Introduction to the Pig Dice Game (display PDF)."
     target="_blank" rel="noreferrer noopener">
     3.11 Introduction to the Pig Dice Game (display PDF)</a></li>
 </ul>
@@ -334,7 +334,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="/zip/4.02-GameofPig-START.zip" 
     target="_blank" rel="noreferrer noopener"
-	alt="4.02 Game of Pig (download ZIP).">
+	aria-label="4.02 Game of Pig (download ZIP).">
     4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
 
@@ -355,7 +355,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 
 <ul>
   <li><a href="/pdf/4.14-GameofPig.pdf" 
-    alt="4.14 Game of Pig (display PDF)."
+    aria-label="4.14 Game of Pig (display PDF)."
     target="_blank" rel="noreferrer noopener"> 
     4.14 Game of Pig (display PDF)</a></li>
 </ul>
@@ -393,12 +393,15 @@ image sliders.</p>
 
 <ul>
   <li><a href="/pdf/1.04-jQuery-Plugins.pdf" 
+    aria-label="1.04 jQuery Plugins (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     1.04 jQuery Plugins (display PDF)</a><br><br></li>
   <li><a href="/zip/1.04-FlexSliderBasic-START.zip" 
+    aria-label="1.04 FlexSlider Basic START (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
     1.04 FlexSlider Basic START (download ZIP)</a><br><br></li>
   <li><a href="/zip/1.04-FlexSliderPlugin.zip" 
+    aria-label="1.04 FlexSlider Plugin (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
     1.04 FlexSlider Plugin (download ZIP)</a></li>
 </ul>
@@ -416,7 +419,7 @@ image sliders.</p>
 
 <ul>
   <li><a href="/pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
-    alt="1.12 jQuery Flex Slider Plugin (display PDF)."
+    aria-label="1.12 jQuery Flex Slider Plugin (display PDF)." 
     target="_blank" rel="noopener noreferrer">
     1.12 jQuery Flex Slider Plugin (display PDF)</a></li>
 </ul>
@@ -445,7 +448,7 @@ series of challenges.</p>
 
 <ul>
   <li><a href="/zip/2.02-jQuery-Scroll-Effects-START.zip" 
-    alt="2.02 jQuery Scroll Effects START (download ZIP)."
+    aria-label="2.02 jQuery Scroll Effects START (download ZIP)."
     target="_blank" rel="noopener noreferrer">
     2.02 jQuery Scroll Effects START (download ZIP)</a></li>
 </ul>
@@ -459,7 +462,7 @@ series of challenges.</p>
 
 <ul>
   <li><a href="/pdf/2.06-jQuery-SmoothScroll.pdf" 
-    alt="2.06 jQuery Smooth Scroll Effects (display PDF)."
+    aria-label="2.06 jQuery Smooth Scroll Effects (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     2.06 jQuery Smoother Scroll Effects (display PDF)</a></li>
 </ul>
@@ -481,7 +484,7 @@ series of challenges.</p>
 <!-- 10 minute read -->
 <ul>
   <li><a href="/pdf/2.17-jQuery-PageLocationTracking.pdf" 
-    alt="2.17 jQuery Page Location Tracking (display PDF)."
+    aria-label="2.17 jQuery Page Location Tracking (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.17 jQuery Page Location Tracking (display PDF)</a></li>
 </ul>
@@ -492,7 +495,7 @@ series of challenges.</p>
 
 <ul>
   <li><a href="/zip/2.18-JS-Scroll-Effects-START.zip" 
-    alt="2.18 JavaScript Scroll Effects START (download ZIP)." 
+    aria-label="2.18 JavaScript Scroll Effects START (download ZIP)." 
     target="_blank" rel="noreferrer noopener">
     2.18 JS Scroll Effects START (download ZIP)</a></li>
 </ul>
@@ -512,7 +515,7 @@ series of challenges.</p>
 
 <ul>
   <li><a href="/pdf/2.28-JS-ScrollEffects.pdf" 
-    alt="2.28 JavaScript Scroll Effects (display PDF)."
+    aria-label="2.28 JavaScript Scroll Effects (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     2.28 JS Scroll Effects (display PDF)</a></li>
 </ul>
@@ -523,19 +526,19 @@ series of challenges.</p>
 
 <ul>
   <li><a href="/zip/2.29-ScriptionPart1-START.zip" 
-    alt="2.29 Scription Part 1 START (download ZIP)."
+    aria-label="2.29 Scription Part 1 START (download ZIP)."
     target="_blank" rel="noreferrer noopener">
 	2.29 Scription Part 1 START (download ZIP)</a></li>
   <li><a href="/zip/2.29-ScriptionPart2-START.zip" 
-    alt="2.29 Scription Part 2 START (download ZIP)."
+    aria-label="2.29 Scription Part 2 START (download ZIP)."
     target="_blank" rel="noreferrer noopener">
     2.29 Scription Part 2 START (download ZIP)</a></li>
   <li><a href="/zip/2.29-ScriptionPart1-Snippets.zip" 
-    alt="2.29 Scription Part 1 Snippets (download ZIP)."
+    aria-label="2.29 Scription Part 1 Snippets (download ZIP)."
     target="_blank" rel="noreferrer noopener">
     2.29 Scription Part 1 Snippets (download ZIP)</a></li>
   <li><a href="/zip/2.29-ScriptionPart2-Snippets.zip" 
-    alt="2.29 Scription Part 2 Snippets (download ZIP)."
+    aria-label="2.29 Scription Part 2 Snippets (download ZIP)."
     target="_blank" rel="noreferrer noopener">
 	2.29 Scription Part 2 Snippets (download ZIP)</a></li>
 </ul>
@@ -555,11 +558,11 @@ series of challenges.</p>
 
 <ul>
   <li><a href="/pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
-    alt="2.39 Scription Site Part 1 HTML and CSS (display PDF)."
+    aria-label="2.39 Scription Site Part 1 HTML and CSS (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a><br><br></li>
   <li><a href="/pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
-    alt="2.39 Scription Site Part 2 Interaction Challenges (display PDF)."
+    aria-label="2.39 Scription Site Part 2 Interaction Challenges (display PDF)."
     target="_blank" rel="noreferrer noopener">
     2.39 Scription Site Part 2 Interaction Challenges (display PDF)</a></li>
 </ul>
@@ -585,7 +588,7 @@ problem down into smaller pieces.</p>
   <li><a href="/zip/3.02-JS-Objects-START.zip" 
     aria-label="3.02 JavaScript Objects START (download ZIP)."
     target="_blank" rel="noreferrer noopener">
-    3.02 JS Objects START (download ZIP)</li>
+    3.02 JS Objects START (download ZIP)</a></li>
 </ul>
 
 <ol start="3" type="1">
@@ -598,7 +601,7 @@ problem down into smaller pieces.</p>
 
 <ul>
   <li><a href="/pdf/3.07-JS-Object-Challenges.pdf" 
-    alt="3.07 JavaScript Object Challenges (display PDF)."
+    aria-label="3.07 JavaScript Object Challenges (display PDF)."
     target="_blank" rel="noreferrer noopener">
     3.07 JS Object Challenges (display PDF)</a></li>
 </ul>
@@ -11729,7 +11732,7 @@ excellent versions people have made of the big game.</p>
 
 <ul>
   <li><a href="./pdf/4.14-GameofPig.pdf" 
-    alt="4.14 Game of Pig (display PDF)." 
+    aria-label="4.14 Game of Pig (display PDF)." 
     target="_blank" rel="noreferrer noopener">
     4.14 Game of Pig (display PDF)</a>
   </li>
@@ -11770,6 +11773,7 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Last Updated 6/25/2024 Tue 8+pm</h6>
 <h6>Last Updated 7/12/2024 Fri 1+am</h6>
 <h6>Last Updated 7/18/2024 Thu 10+am</h6>
+<h6>Last Updated 9/26/2024 Thu 4+pm</h6>
 
 </body>
 </html>
