--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ script in many creative ways.</p>
   <li>Course Summary</li>
 </ol>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-00">1.00 A Note from UC Davis</h2>
+<h2 id="ch1-00-note">1.00 A Note from UC Davis</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p>Welcome to this course!</p>
 
@@ -1122,7 +1122,7 @@ for a future as a JavaScript developer.</p>
 
 <ul>
   <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
-    alt="1.04 jQuery Plugins (display PDF)."
+    aria-label="1.04 jQuery Plugins (display PDF)."
     target="_blank" rel="noreferrer noopener">
     1.04 jQuery Plugins (display PDF)</a></li>
 </ul>
@@ -1136,12 +1136,12 @@ carrying the extension .ZIP.</p>
 
 <ul>
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
-    alt="1.04 Flex Slider Basic START (download ZIP)."
+    aria-label="1.04 Flex Slider Basic START (download ZIP)."
     target="_blank" rel="noopener noreferrer">
 	1.04 Flex Slider Basic START (download ZIP)</a>
   </li>
   <li><a href="./zip/1.04-FlexSliderPlugin.zip"
-    alt="1.04 Flex Slider Plugin (download ZIP)."
+    aria-label="1.04 Flex Slider Plugin (download ZIP)."
     target="_blank" rel="noopener noreferrer">
 	1.04 Flex Slider Plugin (download ZIP)</a>
   </li>
@@ -2694,7 +2694,7 @@ section: <b>jQuery Plugins and FlexSlider</b>.</p>
 
 <ul>
   <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
-    alt="1.12 jQuery Flex Slider Plugin (display PDF)." 
+    aria-label="1.12 jQuery Flex Slider Plugin (display PDF)." 
     target="_blank" rel="noopener noreferrer">
     1.12 jQuery Flex Slider Plugin (display PDF)</a></li>
 </ul>
@@ -2865,7 +2865,7 @@ carrying the extension .ZIP.</p>
 
 <ul>
   <li><a href="./zip/2.02-jQuery-Scroll-Effects-START.zip"
-    alt="2.02 jQuery Scroll Effects START (download ZIP)."   
+    aria-label="2.02 jQuery Scroll Effects START (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
     2.02 jQuery Scroll Effects START (download ZIP)</a></li>
 </ul>
@@ -5077,7 +5077,7 @@ run that way.</p>
 
 <ul>
   <li><a href="./zip/2.18-JS-Scroll-Effects-START.zip"
-    alt="2.18 Scroll Effects START (download ZIP)."
+    aria-label="2.18 Scroll Effects START (download ZIP)."
     target="_blank" rel="noopener noreferrer">
     2.18 JS Scroll Effects START (download ZIP)</a></li>
 </ul>
@@ -6629,23 +6629,23 @@ But I think it's helpful to go through it anyway.</p>
 <ul>
   <li><a href="./zip/2.29-ScriptionPart1-START.zip"
     target="_blank" rel="noopener noreferrer"
-    alt="2.29 Scription Part 1 START (download ZIP).">
+    aria-label="2.29 Scription Part 1 START (download ZIP).">
     2.29 Scription Part 1 START (download ZIP)</a></li>
   <li><a href="./zip/2.29-ScriptionPart1-Snippet.zip"
     target="_blank" rel="noopener noreferrer"
-    alt="2.29 Scription Part 1 Snippet (download ZIP).">
+    aria-label="2.29 Scription Part 1 Snippet (download ZIP).">
     2.29 Scription Part 1 Snippet (download ZIP)</a></li>
   <li><a href="./zip/2.29-ScriptionPart2-START.zip"
     target="_blank" rel="noopener noreferrer"
-    alt="2.29 Scription Part 2 START (download ZIP).">
+    aria-label="2.29 Scription Part 2 START (download ZIP).">
     2.29 Scription Part 2 START (download ZIP)</a></li>
   <li><a href="./zip/2.29-ScriptionPart2-Snippet.zip"
     target="_blank" rel="noopener noreferrer"
-    alt="2.29 Scription Part 2 Snippet (download ZIP).">
+    aria-label="2.29 Scription Part 2 Snippet (download ZIP).">
     2.29 Scription Part 2 Snippet (download ZIP)</a></li>
   <li><a href="./zip/2.29-FlexSliderFiles-START.zip" 
     target="_blank" rel="noopener noreferrer"
-    alt="2.29 Flex Slider Files (download ZIP).">
+    aria-label="2.29 Flex Slider Files (download ZIP).">
     2.29 Flex Slider Files START (download ZIP)</a></li>	
 </ul>
 
@@ -9444,7 +9444,7 @@ the topics.</p>
 <ul>
   <li><a href="https://inter-jquery.bauska.org/pdf/3.07-JS-Objects-Data.pdf" 
     target="_blank" rel="noreferrer noopener" 
-    alt="3.07 JavaScript Objects &amp; Data (display PDF).">
+    aria-label="3.07 JavaScript Objects &amp; Data (display PDF).">
     3.07 JS Objects &amp; Data (display PDF)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -9908,7 +9908,7 @@ functionality you need for each piece.</p>
 
 <ul>
   <li><a href="./pdf/3.11 IntrotoPigDiceGame.pdf" 
-    alt="3.11 Introduction to the Pig Dice Game (display PDF)."
+    aria-label="3.11 Introduction to the Pig Dice Game (display PDF)."
     target="_blank" rel="noreferrer noopener">
     3.11 Intro to Pig Dice Game (display PDF)</a></li>
 </ul>
@@ -10121,7 +10121,7 @@ and labeled properly. We're on our way to creating the pig game.</p>
 
 <ul>
   <li><a href="./zip/4.02-GameofPig-START.zip" 
-    alt="Game of Pig START (download ZIPs)." 
+    aria-label="Game of Pig START (download ZIPs)." 
     target="_blank" rel="noreferrer noopener">
 	4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
